finish netflix section

--- a/sass/components/_movies.scss
+++ b/sass/components/_movies.scss
@@ -108,6 +108,8 @@
         cursor: pointer;
         transition: all 450ms;
         transform: center left;
+        display: flex;
+        overflow-x: scroll;
 
         @include media(tablet) {
           height: 42rem;
