--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,9 @@ html {
         height: 52rem;
         cursor: pointer;
         transition: all 450ms;
-        transform: center left; }
+        transform: center left;
+        display: flex;
+        overflow-x: scroll; }
         @media only screen and (max-width: 1024px) {
           .movies__container--movie__netflix {
             height: 42rem; } }
