updating modals with infos for netflixSection

--- a/sass/components/_movies.scss
+++ b/sass/components/_movies.scss
@@ -17,6 +17,7 @@
     overflow: -moz-hidden-unscrollable;
     overflow-x: scroll;
     display: flex;
+    // flex-direction: column;
     width: 95vw;
     overflow: -moz-scrollbars-horizontal;
 
