--- a/css/style.css
+++ b/css/style.css
@@ -233,4 +233,81 @@ html {
           .movies__container--movie__netflix {
             height: 34rem; } }
 
+.modal {
+  background-color: #111111;
+  display: flex;
+  height: 65rem;
+  background-size: cover;
+  background-position: center; }
+  @media only screen and (max-width: 768px) {
+    .modal {
+      height: 50rem; } }
+  .modal__container {
+    margin-top: -4rem;
+    padding: 7.5rem 0;
+    background: linear-gradient(90deg, black 0%, black 30%, rgba(0, 0, 0, 0.5) 100%);
+    padding-left: 4.5rem;
+    color: #fff; }
+    @media only screen and (max-width: 768px) {
+      .modal__container {
+        padding-top: 10rem; } }
+    @media only screen and (max-width: 768px) {
+      .modal__container {
+        padding-left: 1rem; } }
+    .modal__container-heading {
+      font-size: 6rem;
+      padding-bottom: 1rem; }
+    .modal__container-details {
+      font-size: 1.5rem;
+      display: flex; }
+      .modal__container-details-p {
+        padding: 0 10px 0 0; }
+        .modal__container-details-p:first-child {
+          color: #00b300; }
+    .modal__container-btnPlay {
+      cursor: pointer;
+      font-size: 1.6rem;
+      color: #fff;
+      outline: none;
+      border: none;
+      font-weight: 700;
+      border-radius: 0.2vw;
+      padding-left: 3.5rem;
+      padding-right: 3.5rem;
+      margin-right: 1rem;
+      padding-top: 1rem;
+      background-color: rgba(252, 0, 0, 0.767);
+      padding-bottom: 1rem; }
+      .modal__container-btnPlay:hover {
+        color: #000;
+        background-color: #e6e6e6;
+        transition: all 0.2s;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); }
+    .modal__container-btnFavouriteList {
+      cursor: pointer;
+      font-size: 1.6rem;
+      color: #fff;
+      outline: none;
+      border: none;
+      font-weight: 700;
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      border-radius: 0.2vw;
+      padding-left: 3.5rem;
+      padding-right: 3.5rem;
+      margin-right: 1rem;
+      padding-top: 1rem;
+      background-color: transparent;
+      padding-bottom: 1rem; }
+      .modal__container-btnFavouriteList:hover {
+        color: #000;
+        background-color: #e6e6e6;
+        transition: all 0.2s;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); }
+    .modal__container-overview {
+      width: 50vw;
+      line-height: 1.3;
+      padding: 2.5vh 0;
+      font-size: 1.8rem;
+      color: rgba(255, 255, 255, 0.5); }
+
 /*# sourceMappingURL=style.css.map */
