--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,7 @@ html {
     .modal {
       height: 50rem; } }
   .modal__container {
+    height: 100%;
     margin-top: -4rem;
     padding: 7.5rem 0;
     background: linear-gradient(90deg, black 0%, black 30%, rgba(0, 0, 0, 0.5) 100%);
