--- a/css/style.css
+++ b/css/style.css
@@ -236,14 +236,13 @@ html {
 .modal {
   background-color: #111111;
   display: flex;
-  height: 65rem;
   background-size: cover;
   background-position: center; }
   @media only screen and (max-width: 768px) {
     .modal {
       height: 50rem; } }
   .modal__container {
-    height: 100%;
+    height: 60vh;
     margin-top: -4rem;
     padding: 7.5rem 0;
     background: linear-gradient(90deg, black 0%, black 30%, rgba(0, 0, 0, 0.5) 100%);
