--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,7 +1,7 @@
 .modal {
     background-color: $color-background;
     display: flex;
-    height: 65rem;
+    // height: 65rem;
     background-size: cover;
     background-position: center;
 
@@ -10,7 +10,7 @@
     }
   
     &__container {
-      height: 100%;
+      height: 60vh;
       margin-top: -4rem;
       padding: 7.5rem 0;
       background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgba(0,0,0,1) 30%, rgba(0,0,0,0.5) 100%);
