--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,13 @@ html {
     @media only screen and (max-width: 768px) {
       .modal__container {
         padding-left: 1rem; } }
+    .modal__container .cross {
+      padding: 1em;
+      font-size: 2.5em;
+      font-weight: 900;
+      display: flex;
+      justify-content: flex-end;
+      margin-top: -2em; }
     .modal__container-heading {
       font-size: 6rem;
       padding-bottom: 1rem; }
