--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,3 +1,7 @@
+.toggled{
+  display: none;
+}
+
 .modal {
     background-color: $color-background;
     display: flex;
@@ -24,7 +28,7 @@
         padding-left: 1rem;
       }
 
-      & .cross{
+      & #cross{
         padding: 1em;
         // background-color: red;
         font-size: 2.5em;
@@ -32,6 +36,7 @@
         display: flex;
         justify-content: flex-end;
         margin-top: -2em;
+        cursor: pointer;
       }
   
       &-heading {
