--- a/css/style.css
+++ b/css/style.css
@@ -233,9 +233,6 @@ html {
           .movies__container--movie__netflix {
             height: 34rem; } }
 
-.toggled {
-  display: none; }
-
 .modal {
   background-color: #111111;
   display: flex;
@@ -257,7 +254,7 @@ html {
     @media only screen and (max-width: 768px) {
       .modal__container {
         padding-left: 1rem; } }
-    .modal__container #cross {
+    .modal__container .cross {
       padding: 1em;
       font-size: 2.5em;
       font-weight: 900;
