--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,7 +1,3 @@
-.toggled{
-  display: none;
-}
-
 .modal {
     background-color: $color-background;
     display: flex;
@@ -28,7 +24,7 @@
         padding-left: 1rem;
       }
 
-      & #cross{
+      & .cross{
         padding: 1em;
         // background-color: red;
         font-size: 2.5em;
