--- a/sass/components/_movies.scss
+++ b/sass/components/_movies.scss
@@ -2,6 +2,7 @@
   background-color: $color-background;
   color: #fff;
   padding: 0 4rem;
+  transition-duration: 3s;
 
   &__heading {
     padding-top: 2rem;
