update searchBar without debounce function

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,6 +4,7 @@
   height: 65rem;
   background-size: cover;
   background-position: center;
+  background-position-y: top;
 
   @include media(phone) {
     height: 50rem;
