--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,13 @@ html {
   display: flex;
   flex-direction: column; }
 
+iframe {
+  position: absolute;
+  top: -200px;
+  z-index: 2;
+  width: 100vw;
+  height: calc(110vw/1.77); }
+
 .header {
   background-color: #111111;
   display: flex;
@@ -30,7 +37,8 @@ html {
   .header__container {
     padding-top: 20rem;
     padding-left: 4.5rem;
-    color: #fff; }
+    color: #fff;
+    z-index: 4; }
     @media only screen and (max-width: 768px) {
       .header__container {
         padding-top: 10rem; } }
@@ -67,7 +75,7 @@ html {
 
 .navigation {
   background-color: transparent;
-  z-index: 100;
+  z-index: 3;
   position: fixed;
   width: 100%;
   height: 6.7rem;
