taille video header auto

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -9,7 +9,7 @@ iframe{
 .header {
   background-color: $color-background;
   display: flex;
-  height: 65rem;
+  height: auto;
   background-size: cover;
   background-position: center;
   background-position-y: top;
